--- a/frontend/src/Components/NavBar/Navbar.scss
+++ b/frontend/src/Components/NavBar/Navbar.scss
@@ -7,7 +7,7 @@
 .logo {
   cursor: pointer;
   img {
-    width: 100px;
+    width: 170px;
     height: auto;
   }
 }
@@ -79,7 +79,7 @@ nav .nav-btn,
     display: block;
     visibility: visible;
     opacity: 1;
-    color: #161616fb;
+    color: #3b62ff;
   }
 
   nav a:first-child {
