--- a/frontend/src/Components/Home/Home.scss
+++ b/frontend/src/Components/Home/Home.scss
@@ -56,7 +56,7 @@
         width: 150px;
         text-align: center;
         border-radius: 5px;
-        background-color: #161616;
+        background-color: #3b62ff;
       }
     }
 
