docs:server update

--- a/frontend/src/Components/Home/Benefits/Cards/Card.scss
+++ b/frontend/src/Components/Home/Benefits/Cards/Card.scss
@@ -8,7 +8,7 @@
   height: 350px;
   padding: 30px 22px;
   border-radius: 8px;
-  background-color: #161616cf;
+  background-color: #3b62ff;
   margin: 3px;
   cursor: pointer;
   //   border: 2px solid #fff;
