--- a/frontend/src/Components/Home/Sections/Section.scss
+++ b/frontend/src/Components/Home/Sections/Section.scss
@@ -1,5 +1,6 @@
 .section__container {
-  width: 100%;
+  width: 95vw;
+  margin: 0 auto;
   height: fit-content;
   display: flex;
   flex-direction: column;
