--- a/frontend/src/Components/Home/Home.scss
+++ b/frontend/src/Components/Home/Home.scss
@@ -1,9 +1,9 @@
 .main__container {
   width: 100%;
-  height: calc(100vh - 100px);
+  height: calc(100vh - 80px);
   display: flex;
   overflow-y: hidden;
-  flex-direction: column;
+  flex-direction: row;
   justify-content: center;
   align-items: center;
   position: relative;
@@ -22,6 +22,8 @@
   }
 
   .main__content {
+    width: 95%;
+    height: fit-content;
     position: relative;
     display: flex;
     flex-direction: row;
@@ -31,8 +33,8 @@
     .left {
       display: flex;
       flex-direction: column;
-      gap: 1rem;
-      padding-left: 100px;
+      gap: 0.5rem;
+      padding-left: 16px 25px;
 
       .heading {
         color: #000;
@@ -61,8 +63,22 @@
     }
 
     .right {
-      width: 25vw;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      width: 100%;
       height: 100%;
+
+      .my__left__image {
+        width: 100%;
+        height: auto;
+        img {
+          width: 100%;
+          height: auto;
+          background-position: center;
+          background-size: cover;
+        }
+      }
     }
   }
 }
@@ -74,8 +90,8 @@
     .left {
       padding: 0 10px !important;
     }
-    .right {
-      height: 0vh !important;
-    }
+    // .right {
+    //   height: 0vh !important;
+    // }
   }
 }
