--- a/frontend/src/Components/NavBar/Navbar.scss
+++ b/frontend/src/Components/NavBar/Navbar.scss
@@ -36,7 +36,7 @@ nav {
   .subscribe-link {
     border-radius: 3px;
     padding: 10px 20px;
-    background-color: #000000cf;
+    background-color: #3b62ff;
   }
 }
 
@@ -100,7 +100,7 @@ nav .nav-btn,
     align-items: center;
     justify-content: center;
     gap: 3.5rem;
-    background-color: #161616;
+    background-color: #fff;
     transition: 1s;
     transform: translateY(-100vh);
   }
@@ -116,7 +116,7 @@ nav .nav-btn,
     position: absolute;
     top: 2rem;
     right: 2rem;
-    color: #fff !important;
+    color: #3b62ff !important;
   }
 
   nav a {
